Changes file names, removing ttt.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' type='text/css' href='./tttStyles.css'>
+    <link rel='stylesheet' type='text/css' href='./styles.css'>
     <title>TIC-TAC-TOE retry</title>
 </head>
 <body>
@@ -50,8 +50,8 @@
             <div id="mini-boardsO" class="win-grid"></div>
         </div>
     </main>
-    <script src='./src/tttPlayer.js'></script>
-    <script src='./src/tttGame.js'></script>
-    <script src='./src/tttMain.js'></script>
+    <script src='./src/player.js'></script>
+    <script src='./src/game.js'></script>
+    <script src='./src/main.js'></script>
 </body>
 </html>
